ingress-spinnaker-deck.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spin-ingress
  namespace: spinnaker
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: spin-deck
            port: 
              number: 9000
      - path: /gate/*
        pathType: Prefix
        backend:
          service:
            name: spin-gate
            port: 
              number: 8084
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spin-auth-ingress
  namespace: spinnaker
  annotations:
    ingress.kubernetes.io/rewrite-target: /auth/
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /auth/*
        pathType: Prefix
        backend:
          service:
            name: spin-gate
            port: 
              number: 8084
