ingress-spinnaker-deck1.yaml
jenkinsapiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spin-ingress
  namespace: spinnaker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /spinnaker(/.*)
        pathType: Prefix
        backend:
          service:
            name: spin-deck
            port:
              number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spin-gate-ingress
  namespace: spinnaker
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spin-gate
            port:
              number: 8084
